:beers: Fix : 메인맵 관련 API swagger description 추가 및 필터링마커 API 추가